<resources>
    <string name="app_name">AoL app</string>
    <string name="string_about">
        AoL é uma plataforma gratuita, para a publicação de anúncios de produtos novos e usados.
\nCom ao AoL tudo é muito prático, fácil e intuitivo, você não precisa logar no app, ou criar conta para visualizar anúncios de outros usuários e nem para fechar um negócio,
porém, fazendo parte da nossa comunidade, você também pode anunciar seus produtos e desapegar de forma rápida, pode salvar e gerenciar anúncios favoritos, assim como também
pode destacar seu anúncio, fazendo com que outros usuários vejam seu anúncios no topo da lista.
\nNo AoL, não solicitamos dados sensíveis, apenas o básico para uma comunicação entre anunciante e cliente, afim de manter a segurança dos dados de ambas as partes.
    </string>
    <string name="clientId">Your clientID</string>
    <string-array name="states">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string-array name="dateFilter">
        <item>Todos</item>
        <item>Mais recentes</item>
        <item>Mais antigos</item>
    </string-array>
    <string-array name="security">
        <item>Para sua segurança, negocie em lugares públicos e movimentados!</item>
        <item>Desconfie de preços muito a baixo do mercado!</item>
        <item>Na dúvida, feche o negócio sempre acompanhado de pessoas conhecidas.</item>
    </string-array>
    <string-array name="tipsFav">
        <item>Aqui você pode gerenciar seus favoritos</item>
        <item>Use o botão deletar nos cards para deletar individualmente</item>
        <item>Use o botão deletar no topo da janela para deletar toda a coleção</item>
    </string-array>
    <string-array name="tipsProfile">
        <item>Personalize \nseu perfil \ncom a sua cara!</item>
        <item>Isso promove \nconfiabilidade \nno anúncio</item>
        <item>E aumenta suas \nchances de venda.</item>
    </string-array>
    <string-array name="tipsMy">
        <item>Aqui você gerencia os seus anúncios</item>
        <item>Pressione sobre cada anúnico para abrir as opções</item>
        <item>Você pode editar, excluir ou destacar seu anúncio</item>
    </string-array>
    <string name="textDialogLocation"><p>"Para usar este recurso, você precisa ativar sua localização!</p>
        <p>Isso se faz necessário, para manter a confiabilidade do anúncio</p>
        <p>e a segurança dos usuarios da plataforma.</p></string>
    <string name="titleDialogLocation">Localização necessária</string>
    <string name="txtBtnNoDialogLocation">Me ajude!!</string>
    <string name="txtBtnYesDialogLocation">Ok! Eu sei o que fazer!</string>
    <string name="txtBtnYesDialog">Sim</string>
    <string name="txtBtnCancelDialog">Cancelar</string>
    <string name="titleDialogAllFav">Exclusão</string>
    <string name="textDialogAllFav">Deseja excluir a sua coleção de favoritos?</string>
    <string name="titleDialogFav">"Excluir anúncio "</string>
    <string name="textDialogFav">Deseja excluir este anúncio da sua lista de favoritos?</string>
    <string name="titleDialogLogoff">Fazer logout no aplicativo</string>
    <string name="textDialogLogoff">Você deseja realmente sair?</string>
    <string name="saudation">Ola! <strong>Marco</strong></string>
    <string name="messageErrorConnectionFav">Não foi possivel obter sua lista de favoritos. \nTente atualizar a página</string>
    <string name="messageErrorConnectionOwner">Não foi possivel obter sua lista de anúncios. \nTente atualizar a página</string>
    <string name="messageErrorConnectionMain">Não foi possivel obter lista de anúncios. \nTente atualizar a página</string>
    <string name="titleErrorConnection">Ops, problemas de conexão</string>
    <string name="titleNoContent">Tudo certo por aqui!</string>
    <string name="titleNoContentMain">Ops! Parece que não temos resultados.</string>
    <string name="titleNoContentOffer">Tudo nos conformes!</string>
    <string name="messageNoContentFav">Adicione alguns favoritos para ver mais tarde, mas seja rapido! \nTem sempre alguém comprando :D</string>
    <string name="messageNoContentOwner">Começe a anúnciar agora mesmo! É rapído, facil \ne você ainda vai levantar aquela grana!</string>
    <string name="messageNoContentMain">Seja o primeiro desta região a anunciar um produto \ne deixe o resto com a gente!</string>
    <string name="messageNoContentOffer">Vamos la! Dê seu lance! Vamos ver no que vai dar!</string>
    <string name="txtDialog_dialog">Obrigado por usar nossa plataforma! \nDeseja deletar o anúncio?</string>
    <string name="txtTitle_dialog">Legal</string>
    <string name="descLance">Faça seu lance! O valor será enviado ao vendedor, e se tudo der certo, o produto será seu.</string>
    <string name="lbl_title_offer">Você ofertou</string>
    <string name="lblDescription_details">Descrição</string>
    <string name="lblLanceTitle_details">Leilão</string>
    <string name="lblContactTitle_details">Contato</string>
    <string name="lblLocationTitle_details">Localização</string>
    <string name="lblSecurityTitle_details">Seugurança</string>
    <string name="lblWarning_details">Irregularidades no anuncio?</string>
    <string name="lblButtonWarning_details">Denuncie</string>
    <string name="lblButtonLance_details">Lance</string>
    <string name="lblTitleWindow_details">Detalhes</string>
    <string name="lblMemberSince_details">Usuario desde</string>
    <string name="lblTitleWindow_fav">Favoritos</string>
    <string name="lblTextLocation_location">Quase pronto!</string>
    <string name="lblTextButtomSetLocation_location">Escolher localização</string>
    <string name="lblButtonGetLocation_location">Obter localização</string>
    <string name="lblTitleWindow_new">Novo</string>
    <string name="lblTitleImages_new">Toque nas imagens para selecionar as fotos</string>
    <string name="lblTitleCategory_new">Selecione uma categoria</string>
    <string name="lblTitleSituation_new">O item é</string>
    <string name="lblTitleDetails_new">Insira um titulo e um preço para o anúncio</string>
    <string name="lblHintEditTitle_new">Título</string>
    <string name="lblTitleDescription_new">Crie uma descriçao(Min. de 20 caracteres)</string>
    <string name="lblHintEditDescription_new">Descrição</string>
    <string name="textEditDescription_new">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim bibendum, scelerisque metus et, varius ligula. Quisque commodo lacus eget neque condimentum, tempus efficitur sapien lacinia. Quisque condimentum sem in leo vestibulum, lacinia pulvinar tellus pellentesque. Vestibulum semper arcu nec dictum consectetur. Fusce consectetur ante id lectus gravida posuere in a diam. Nulla cursus odio at augue tincidunt, id elementum ipsum finibus. Duis dignissim risus in nibh rhoncus, et pretium metus fringilla.</string>
    <string name="lblTitleContact_new">Revise seu contato</string>
    <string name="lblHintEditPhone_new">Celular</string>
    <string name="lblTitleLocation_new">Sua cidade (com base no seu perfil)</string>
    <string name="lblButtonPublication_new">Publicar</string>
    <string name="lblRadioButtonUsed_new">Usado</string>
    <string name="lblRadioButtonNew_new">Novo</string>
    <string name="lblTitleWindow_owner">Meus anúncios</string>
    <string name="lblTitleWindow_profile">Conta</string>
    <string name="lblButtonGallery_profile">Galeria</string>
    <string name="lblButtonSave_profile">Salvar</string>
    <string name="lblTitleItem_profile">Anúncios ativos:</string>
    <string name="lblAmount_profile">Total vendido:</string>
    <string name="lblTitleCategory_profile">Selecione uma categoria de sua preferência</string>
    <string name="lblTitleContact_profile">Seus dados de contato</string>
    <string name="lblHintEditName_profile">Nome</string>
    <string name="lblHintEditLastName_profile">Sobrenome</string>
    <string name="lblHintEditEmail_profile">E-mail</string>
    <string name="lblHintEditPhone_profile">Celular</string>
    <string name="lblTitleLocation_profile">Sua localização</string>
    <string name="lblLogo_splash">Anúncios onLine</string>
    <string name="lblVersion_splash">Versão 1.0.12</string>
    <string name="lblTitleWindow_about">Sobre</string>
    <string name="lblLogo_about">Anúncios onLine</string>
    <string name="lblVersion_about">1.0.12</string>
    <string name="lblDev_about">automatoDev</string>
    <string name="lblButtonForgotPassword_login">Esqueci minha senha</string>
    <string name="lblNotHaveAccount_login">Não possui conta?</string>
    <string name="lblRegister_login">Registre-se</string>
    <string name="lblButtonGoogle_login">Entrar com o Google</string>
    <string name="lblButtonFacebook_login">Entrar com o Facebook</string>
    <string name="lblHintEditPassword_login">Senha</string>
    <string name="lblHintEditEmail_login">E-mail</string>
    <string name="lblPresentationNoLogin_main">Faça login e aproveite o que temos \nde melhor para você</string>
    <string name="lblButtonIWant_main">Eu quero!</string>
    <string name="lblButtonProfile_main">Meu perfil</string>
    <string name="lblButtonLances_main">Meus lances</string>
    <string name="lblButtonMyItems_main">Meus anúncios</string>
    <string name="lblButtonFavourites_main">Meus favoritos</string>
    <string name="lblButtonProblem_main">Tenho um problema</string>
    <string name="lblButtonFeedBack_main">Avalie-nos</string>
    <string name="lblButtonAbout_main">Sobre o AoL</string>
    <string name="lblButtonExit_main">Sair</string>
    <string name="lblButtonFilter_main">Filtro</string>
    <string name="lblHintEditSearch_main">Insira sua pesquisa aqui</string>
    <string name="lblWelcome_register">Bem-vindo!</string>
    <string name="lblLetsGo_login">Vamos la!</string>
    <string name="lblHintEditName_register">Nome</string>
    <string name="lblHintEditLastName_register">Sobrenome</string>
    <string name="lblHintEditEmail_register">E-mail</string>
    <string name="lblHintEditPhone_register">Celular</string>
    <string name="lblHintEditPassword_register">Senha</string>
    <string name="lblIHaveAccount_register">Já possui uma conta?</string>
    <string name="lblLogin_register">Faça login</string>
    <string name="lblLocationInit_dialog">Vamos configrar sua localização antes de começar!</string>
    <string name="lblButtonOk_dialog">Tudo certo!</string>
    <string name="lblTitleDialog_dialogOffer">Você ofertou</string>
    <string name="lblTitleDialog_dialogOptions">Opções do anúncio</string>
    <string name="lblButtonSale_dialogOptions">Já vendi!</string>
    <string name="lblButtonOffers_dialogOptions">Ver ofertas</string>
    <string name="lblButtonEdit_dialogOptions">Editar</string>
    <string name="lblTitleOffer_bottomFilter">Filtros básicos</string>
    <string name="lblTitleProblem_sendEmail">Tenho um problema</string>
    <string name="lblButtonSend_sendEmail">Enviar</string>
    <string name="lblTitleEmail_sendEmail">Uma prévia do seu problema</string>
    <string name="lblHintEditTitle_sendEmail">Título</string>
    <string name="lblTitleMessage_sendEmail">Nos conte o que realmente houve:</string>
    <string name="lblHintEditMessage_sendEmail">Mensagem</string>
    <string name="lblTitleRecovery_recovery">Esqueci minha senha</string>
</resources>