<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_dialog"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle_recovery"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_lbl_title_offer"
            android:gravity="center"
            android:text="@string/lblTitleRecovery_recovery"
            android:fontFamily="@font/roboto_light"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgResource_recovery"
            android:layout_width="match_parent"
            android:src="@drawable/ic_undraw_security_o890"
            android:layout_height="200dp"/>

        <EditText
            android:id="@+id/edtEmail_recovery"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edt_global"
            android:drawableStart="@drawable/ic_email_red"
            android:drawablePadding="6dp"
            android:hint="@string/lblHintEditEmail_profile"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="#656363"

            android:textSize="15sp" />


        <Button
            android:id="@+id/btnSend_recovery"
            style="@style/Theme.Design.BottomSheetDialog"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:paddingStart="100dp"
            android:drawablePadding="-100dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_mark_email_white_32"
            android:background="@drawable/bg_button_box"
            android:padding="10dp"
            android:text="@string/lblButtonSend_sendEmail" />


    </LinearLayout>
</RelativeLayout>